Use authZ not authN. Derp. Fixes #330

--- a/webapp/ape/user.html
+++ b/webapp/ape/user.html
@@ -47,7 +47,7 @@ if($title_log['source'] == 'ape')
 // If the user has the correct privileges, add the notes to the session
 $calllog_level = \PSU::db('calllog')->GetOne("SELECT user_privileges FROM call_log_employee WHERE user_name=?", array($_SESSION['username']));
 if( 
-	IDMObject::authN('department', 'Information Technology Services') 
+	IDMObject::authZ('department', 'Information Technology Services') 
 	|| 'trainee' == $calllog_level
 	|| 'sta' == $calllog_level
 	|| 'shift_leader' == $calllog_level
