Resolves #342, call log state added. additional states added.

--- a/webapp/calllog/new_call.html
+++ b/webapp/calllog/new_call.html
@@ -188,6 +188,7 @@ if($resnet_call == 'resnet'){
 }
 
 $tpl->assign('call_status', $call_status);
+$tpl->assign('call_state', $call_state);
 $tpl->assign('call_priority_select_list', PSUHTML::getSelectOptions($call_priority_options, $call_priority));
 $tpl->assign('call_state_select_list', PSUHTML::getSelectOptions($call_state_options, $call_state));
 $tpl->assign('building_select_list', PSUHTML::getSelectOptions($building_options, $building_id));
