Updating date info and activating.

--- a/webapp/anecf/index.html
+++ b/webapp/anecf/index.html
@@ -1,5 +1,5 @@
 <?php
-header('Location: index.inactive.html');
+header('Location: index.active.html');
 ?>
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
