Updating and activating 2012 brochure

--- a/webapp/anecf/index.active.html
+++ b/webapp/anecf/index.active.html
@@ -26,7 +26,7 @@ $choral_header = '
 	<h1>35th All New England Choral Festival</h1>
 	<h4>November 1st, 2012</h4>
 	<h4><em>Dr. Dan Perkins</em>, Conductor</h4>
-	<!--<h4>For full details on the Festival, view the <a href="brochure.pdf" target="_blank">Brochure</a></h4>-->
+	<h4>For full details on the Festival, view the <a href="brochure.pdf" target="_blank">Brochure</a></h4>
 	<h4>Plymouth State University</h4>
 	<h5>Registration deadline: Friday, September 14th</h5>
     <h5>$25 participation fee</h5>
