--- a/webapp/anecf/index.inactive.html
+++ b/webapp/anecf/index.inactive.html
@@ -4,13 +4,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>33rd All New England Choral Festival</title>
+<title>34th All New England Choral Festival</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 
 <body>
 <center>
-<h1>33rd All New England Choral Festival</h1>
+<h1>34th All New England Choral Festival</h1>
 <h4>Plymouth State University</h4> 
 <h4>Dr. Dan Perkins, Conductor</h4>
 <hr width="30%">
