Update the ecommerce/admin app to use mo' better templates

--- a/webapp/ecommerce/admin/index.html
+++ b/webapp/ecommerce/admin/index.html
@@ -4,7 +4,7 @@
 	// ***
 
 	// *** Setup Template ***
-	$smarty = new PSUSmarty();
+	$smarty = new PSUTemplate();
 	$smarty->template_dir=$GLOBALS['BASE_DIR']."/templates/admin";
 	// *** End Template Setup ***
 
