--- a/webapp/ecommerce/admin/manage.html
+++ b/webapp/ecommerce/admin/manage.html
@@ -8,7 +8,7 @@
 	// *** End Includdes
 
 	// *** Setup Template ***
-	$smarty = new PSUSmarty();
+	$smarty = new PSUTemplate();
 	$smarty->template_dir=$GLOBALS['BASE_DIR']."/templates/admin";
 	// *** End Template Setup ***
 
