--- a/webapp/ecommerce/admin/manage.html
+++ b/webapp/ecommerce/admin/manage.html
@@ -1,75 +1,70 @@
 <?php
-	// *** manage.html ***
+require_once 'autoload.php';
+PSU::session_start(); // force ssl + start a session
+
+$GLOBALS['PARENT_URL'] = '/webapp/ecommerce';
+$GLOBALS['BASE_URL'] = '/webapp/ecommerce/admin';
+$GLOBALS['BASE_DIR'] = __DIR__;
+
+$GLOBALS['TITLE'] = 'PSU eCommerce Admin';
+$GLOBALS['TEMPLATES'] = $GLOBALS['BASE_DIR'].'/../templates/admin';
+
+$tpl = new PSUTemplate();
 	
-	// *** Begin Includes and Setup***
-	require_once('includes/AdminManager.class.php');
-	$manager = new AdminManager();
-	require_once('PSUHTML.class.php');
-	// *** End Includdes
+require_once('includes/AdminManager.class.php');
+$manager = new AdminManager();
 
-	// *** Setup Template ***
-	$smarty = new PSUTemplate();
-	$smarty->template_dir=$GLOBALS['BASE_DIR']."/templates/admin";
-	// *** End Template Setup ***
-
-	$smarty->assign('processes', $manager->getAllProcesses());
+$tpl->assign('processes', $manager->getAllProcesses());
 	
-	// *** Handle adds and edits ***
-	if(is_numeric($_GET['edit'])){
+// *** Handle adds and edits ***
+if(is_numeric($_GET['edit'])){
 
-		if($_SERVER['REQUEST_METHOD']=='POST'){
-			$process = $_POST;
-			if($process['name']=='' || $process['type']=='' || $process['code']=='' || $process['class']==''){
-				$errors[]="Please fill in all fields.";
-				$smarty->assign('process', $process);
-				$smarty->assign('errors', $errors);
-			}
-			else{
-				$manager->updateProcess($process);
-				PSUHTML::redirect($GLOBALS['BASE_URL'].'/admin/manage.html?success=edit');
-			}
-			
+	if($_SERVER['REQUEST_METHOD']=='POST'){
+		$process = $_POST;
+		if($process['name']=='' || $process['type']=='' || $process['code']=='' || $process['class']==''){
+			$_SESSION['errors'][]="Please fill in all fields.";
+			$tpl->assign('process', $process);
 		}
 		else{
-			$smarty->assign('process', $manager->getProcess($_GET['edit']));
+			$manager->updateProcess($process);
+			PSUHTML::redirect($GLOBALS['BASE_URL'].'/manage.html?success=edit');
 		}
-		$smarty->assign('editing', $_GET['edit']);
-		$smarty->assign('subcontent', 'edit_process.tpl');
-	}
-	elseif($_GET['add']){
-
-		if($_SERVER['REQUEST_METHOD']=='POST'){
-			$process = $_POST;
-			if($process['name']=='' || $process['type']=='' || $process['code']=='' || $process['class']==''){
-				$errors[]="Please fill in all fields.";
-				$smarty->assign('process', $process);
-				$smarty->assign('errors', $errors);
-			}
-			else{
-				$manager->addProcess($process);
-				PSUHTML::redirect($GLOBALS['BASE_URL'].'/admin/manage.html?success=add');
-			}
-			
-		}
-
-		$smarty->assign('subcontent', 'add_process.tpl');
-
-	}
-	elseif($_GET['delete']){
 		
-		$manager->deleteProcess($_GET['delete']);
-		PSUHTML::redirect($GLOBALS['BASE_URL'].'/admin/manage.html?success=delet');
+	}
+	else{
+		$tpl->assign('process', $manager->getProcess($_GET['edit']));
+	}
+	$tpl->assign('editing', $_GET['edit']);
+	$tpl->assign('subcontent', 'edit_process.tpl');
+}
+elseif($_GET['add']){
+
+	if($_SERVER['REQUEST_METHOD']=='POST'){
+		$process = $_POST;
+		if($process['name']=='' || $process['type']=='' || $process['code']=='' || $process['class']==''){
+			$_SESSION['errors'][]="Please fill in all fields.";
+			$tpl->assign('process', $process);
+		}
+		else{
+			$manager->addProcess($process);
+			PSUHTML::redirect($GLOBALS['BASE_URL'].'/manage.html?success=add');
+		}
+		
+	}
+
+	$tpl->assign('subcontent', 'add_process.tpl');
+
+}
+elseif($_GET['delete']){
 	
-	}
-	elseif($_GET['success']){
-		$smarty->assign('success', $_GET['success']);
-	}
+	$manager->deleteProcess($_GET['delete']);
+	PSUHTML::redirect($GLOBALS['BASE_URL'].'/admin/manage.html?success=delet');
 
-	$smarty->assign('page_title', 'Manage');
-	$smarty->assign('content', 'manage.tpl');
+}
+elseif($_GET['success']){
+	$_SESSION['successes'][] = $_GET['success'];
+}
 
-	// *** Display the main template ***
-	$smarty->display('main.tpl');
-	// *** End Display ***
+$tpl->assign('content', 'manage.tpl');
 
-?>
+$tpl->display('index.tpl');
